// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json module #jsonDiff for non-trivial cases should correctly diff complex object structures 1`] = `
{
  "changing": "123",
  "foo": {
    "bar1": 2,
  },
  "hello1": {
    "nested": {
      "nestedX2": {
        "added": 123,
      },
    },
    "nestedAdd": {
      "primitive": 123,
    },
  },
  "removed": undefined,
  "removed2": undefined,
}
`;

exports[`json module #jsonDiff for non-trivial cases should correctly diff function changes in arrays 1`] = `
{
  "foo": [
    {
      "fn": [Function],
    },
  ],
}
`;

exports[`json module #jsonDiff for trivial cases should correctly diff primitives 1`] = `
{
  "alice": 2022-01-27T00:00:00.000Z,
  "foo": "bar",
  "func": [Function],
  "hello": 123,
}
`;

exports[`json module #jsonMerge for objects and arrays should create deep clones for arrays 1`] = `
{
  "a": [
    {
      "y": 1,
    },
  ],
}
`;

exports[`json module #jsonMerge for objects and arrays should create deep clones for objects 1`] = `
{
  "a": {
    "x": 1,
    "y": 2,
    "z": 3,
  },
}
`;

exports[`json module #jsonMerge for objects and arrays should honour \`avoidDeepClone 1`] = `
{
  "a": [
    {
      "x": 1,
    },
  ],
  "b": [
    {
      "y": 2,
    },
  ],
}
`;

exports[`json module #jsonMerge for trivial cases should honour DELETE value 1`] = `
{
  "a": 1,
  "b": "b",
  "d": {
    "1": 1,
    "3": 3,
  },
}
`;

exports[`json module #jsonMerge for trivial cases should merge array properties correctly 1`] = `
{
  "a": [
    [
      {
        "x2": 1,
      },
      {
        "y2": 1,
      },
    ],
    [
      {
        "m2": 2,
        "n2": 2,
      },
    ],
  ],
  "b": [],
  "c": [
    10,
    9,
    8,
    7,
    6,
  ],
}
`;

exports[`json module #jsonMerge for trivial cases should merge arrays correctly 1`] = `
[
  [
    {
      "x2": 1,
    },
    {
      "y2": 1,
    },
  ],
  [
    {
      "m2": 2,
      "n2": 2,
    },
  ],
]
`;

exports[`json module #jsonMerge for trivial cases should merge primitives correctly 1`] = `
{
  "date": 2022-01-27T00:00:00.000Z,
  "date2": 2022-01-27T00:00:00.000Z,
  "date3": 2022-01-27T00:00:00.000Z,
  "fn": [Function],
  "fn2": [Function],
  "foo": "bar",
  "foo2": "bar2",
  "foo3": "bar2",
  "no": 2,
  "no2": 2,
}
`;

exports[`json module #jsonMerge for trivial cases should take highest precedent value when types conflict 1`] = `
{
  "a": "a",
  "b": {},
}
`;
